--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ target/
 /.idea/kotlinc.xml
 /.idea/uiDesigner.xml
 /.idea/encodings.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_1.xml
+/.idea/libraries/Maven__junit_junit_4_10.xml
